2005-02-28  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-oof.c (sync_oof_info): Checking for NULL OOF 
	message. Fixes the crash when oof_info file gets created here.

2005-02-28  Sarfraaz Ahmed <asarfraaz@novell.com>

	* exchange-oof.h (exchange_oof_set) : This got missed in the previous 
	commit.

2005-02-27  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-oof.c (sync_oof_info): If oof_info file exists and
	has more recent data set using account editor updates the server with
	this information. If server has more recent oof data, entered either
	through out of office assistant dialog from exchange component or
	through any other client, then updates oof_info file, so that account
	editor displayes the proper state and message, reading this file.
	(exchange_oof_init)(update_state): Calls exchange_oof_set() with
	"updated" flag set to TRUE, based on which the oof_info files gets
	updated.
	(exchange_oof_get): Invokes sync_oof_info().
	(exchange_oof_set): Calls sync_oof_info() to write the data to the file,
	when file contents need to be updated.
	(exchange_oof): Checks for oof message and sets the buffer.
	Fixes #72709.

2005-02-26  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange.c : The mode on the backend was not
	being set back to REMOTE when turned online. Fixed this now.
	* camel/camel-exchange-folder.c (get_message_data): Dont contact mailer
	in offline mode.
	(camel_exchange_folder_update_message_tag): Similar
	* camel/camel-exchange-folder.h : Similar
	* camel/camel-exchange-store.c (exchange_get_folder): Send the offline
	state while creating the new folder
	* mail/mail-stub-exchange.c: Modified to use the new offline checking
	method.
	(refresh_folder_internal): Return the data in the stub if offline.
	* storage/exchange-account.c : Use the new offline checking method
	(exchange_account_is_offline_sync_set): Make it return the proper error
	values using the enums for offline.